{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 17,
  "lineage": "675158a9-c00c-9254-2611-7d7443a92157",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:security-group/sg-09107d45458ba6771",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-09107d45458ba6771",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tf-backend",
            "name_prefix": null,
            "owner_id": "100174442107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:internet-gateway/igw-03a466311ccacc0ad",
            "id": "igw-03a466311ccacc0ad",
            "owner_id": "100174442107",
            "tags": {
              "Name": "tf-backend"
            },
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a466311ccacc0ad",
            "id": "r-rtb-0c6f90e5a19863e5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6f90e5a19863e5a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c6f90e5a19863e5a",
            "owner_id": "100174442107",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a466311ccacc0ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-backend-public"
            },
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085502b1918fc4416",
            "route_table_id": "rtb-0c6f90e5a19863e5a",
            "subnet_id": "subnet-0b194607122c534ca"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06af354f2e5abed31",
            "route_table_id": "rtb-0c6f90e5a19863e5a",
            "subnet_id": "subnet-06110f0ac35501695"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db0c0cc532f8a871",
            "route_table_id": "rtb-0c6f90e5a19863e5a",
            "subnet_id": "subnet-0d980428ddfef4b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:subnet/subnet-0b194607122c534ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b194607122c534ca",
            "map_public_ip_on_launch": true,
            "owner_id": "100174442107",
            "tags": {
              "Name": "tf-backend-public-eu-central-1a"
            },
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:subnet/subnet-06110f0ac35501695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-06110f0ac35501695",
            "map_public_ip_on_launch": true,
            "owner_id": "100174442107",
            "tags": {
              "Name": "tf-backend-public-eu-central-1b"
            },
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:subnet/subnet-0d980428ddfef4b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0d980428ddfef4b41",
            "map_public_ip_on_launch": true,
            "owner_id": "100174442107",
            "tags": {
              "Name": "tf-backend-public-eu-central-1c"
            },
            "vpc_id": "vpc-0ec8700681ee9a210"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:100174442107:vpc/vpc-0ec8700681ee9a210",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07493f61cf8d3fca8",
            "default_route_table_id": "rtb-01455571664ec45dc",
            "default_security_group_id": "sg-08aab4e1cdd5d3869",
            "dhcp_options_id": "dopt-2884b843",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec8700681ee9a210",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01455571664ec45dc",
            "owner_id": "100174442107",
            "tags": {
              "Name": "tf-backend"
            }
          }
        }
      ]
    }
  ]
}